[gd_scene load_steps=12 format=3 uid="uid://bys67aluqyox4"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ayp0x"]
[ext_resource type="Texture2D" uid="uid://ciwhurobshy73" path="res://Assets/Player/Idle-Sheet.png" id="2_a7yuu"]
[ext_resource type="Texture2D" uid="uid://exomugydqmjm" path="res://Assets/Player/Run-Sheet.png" id="3_csmki"]
[ext_resource type="Theme" uid="uid://cpwjiok04og8e" path="res://Assets/theme.tres" id="4_1qt2t"]
[ext_resource type="Script" path="res://Scripts/SpeakUI.gd" id="5_ircpd"]

[sub_resource type="Animation" id="Animation_fh4qs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle-sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Run-sheet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Run-sheet:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6kvyr"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle-sheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Run-sheet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jdpdj"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Run-sheet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle-sheet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Run-sheet:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ystxh"]
_data = {
"RESET": SubResource("Animation_fh4qs"),
"idle": SubResource("Animation_6kvyr"),
"walk": SubResource("Animation_jdpdj")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1lfpk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ng2hl"]
radius = 16.1245

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ayp0x")

[node name="Idle-sheet" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
texture = ExtResource("2_a7yuu")
hframes = 4

[node name="Run-sheet" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -32)
texture = ExtResource("3_csmki")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ystxh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -14.5)
shape = SubResource("CapsuleShape2D_1lfpk")

[node name="Player" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1, -15)
shape = SubResource("CircleShape2D_ng2hl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -13)
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="tooltip" type="Label" parent="."]
visible = false
offset_left = -44.0
offset_top = 81.0
offset_right = 53.0
offset_bottom = 95.0
theme = ExtResource("4_1qt2t")
theme_override_font_sizes/font_size = 10
text = "Press E to interact"

[node name="InventoryNotification" type="Label" parent="."]
visible = false
offset_left = -77.0
offset_top = 2.0
offset_right = 77.0
offset_bottom = 13.0
size_flags_horizontal = 6
size_flags_vertical = 2
theme = ExtResource("4_1qt2t")
text = "Potatoe"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="SpeakUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -193.0
offset_top = -121.0
offset_right = 192.0
offset_bottom = 95.0
script = ExtResource("5_ircpd")

[node name="Input" type="TextEdit" parent="SpeakUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.5
offset_top = -90.0
offset_right = 57.5
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_1qt2t")
theme_override_font_sizes/font_size = 7
placeholder_text = "What do you want to say?"
wrap_mode = 1

[node name="Inventory" type="ItemList" parent="SpeakUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -58.0
offset_right = -6.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_1qt2t")
theme_override_font_sizes/font_size = 7
item_count = 1
item_0/text = "Nothing"

[node name="Name" type="Label" parent="SpeakUI/Inventory"]
layout_mode = 0
offset_left = 8.0
offset_top = -13.0
offset_right = 57.0
offset_bottom = -2.0
theme = ExtResource("4_1qt2t")
text = "Give to Billy"

[node name="Button" type="Button" parent="SpeakUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -32.0
offset_right = -135.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_1qt2t")
text = "Submit"

[connection signal="area_entered" from="Player" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Player" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="item_selected" from="SpeakUI/Inventory" to="SpeakUI" method="_on_inventory_item_selected"]
[connection signal="pressed" from="SpeakUI/Button" to="SpeakUI" method="_on_button_pressed"]
